# resource-effectful

./: .gitignore  CHANGELOG.md  README.md  resource-effectful.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
src/Effectful/: Resource.hs
test/: Main.hs
test/Test/Effectful/: Resource.hs  ResourceExtended.hs
