cabal-version:   3.0
name:            resource-effectful
version:         0.1.1.0
synopsis:        A region-based resource effect for the effectful ecosystem.
description:     Please see the README on GitHub at <https://github.com/typedbyte/resource-effectful#readme>
homepage:        https://github.com/typedbyte/resource-effectful
bug-reports:     https://github.com/typedbyte/resource-effectful/issues
license:         BSD-3-Clause
license-file:    LICENSE
author:          Michael Szvetits
maintainer:      typedbyte@qualified.name
copyright:       2025 Michael Szvetits
category:        Control
build-type:      Simple
extra-doc-files:
  CHANGELOG.md
  README.md

common shared-properties
  default-language: GHC2021
  build-depends:
      base >= 4.16.0 && < 5
  ghc-options:
      -Wall

library
  import: shared-properties
  hs-source-dirs: src
  build-depends:
      effectful-core >= 2.0 && < 2.6
    , stm            >= 2.5 && < 2.6
  exposed-modules:
      Effectful.Resource

test-suite resource-effectful-test
  import: shared-properties
  type:                exitcode-stdio-1.0
  main-is:             Main.hs
  other-modules:       Test.Effectful.Resource
                       Test.Effectful.ResourceExtended
  build-depends:
      resource-effectful
    , effectful-core >= 2.0 && < 2.6
    , tasty
    , tasty-hunit
    , stm
  hs-source-dirs:      test

source-repository head
  type:     git
  location: https://github.com/typedbyte/resource-effectful.git